		Continuing on the SGI O2 graphics; when the nr of tiles or
		"partial pixels" is in mismatch with the screen resolution,
		the skewed result now looks the same as on my real physical O2.
20181013	More SGI O2 graphics work: TLBs. OpenBSD can now show graphical
		console messages.
20181015	Some more emulated O2 registers now return the same values as
		my real O2 does.
		Refactoring the O2 "output" to always be 24-bit, separate from
		the emulated framebuffer tiles (which may be e.g. 8 bit).
		NetBSD's colors (RG3B2 mode) are now probably more correct.
		Changing from 64 to 128 MB ram for the O2; this matches what
		my real O2 has, and it is now detected correctly both by OSes
		and the PROM.
		Implementing the O2's GBE cursor; both bitmap and crosshair
		modes work exactly like on the real machine now.
		Finally fixed the bug which caused scroll-up to not work when
		running the O2's PROM.
20181016	More work on the O2 graphics; managed to get rid of the Linux
		tweaked special case rendering mode.
		Splitting the O2 GBE into a GBE part and a Rendering Engine
		part.
20181017	Refactored the register representation in dev_sgi_ip32's crime
		interrupt controller.
		Adding a horrible hack to enable the use of a RAM_MIRROR at
		0x40000000 (for SGI O2 emulation).
20181018	Updating the OpenBSD/sgi installation instructions (still
		in unsupported.html though, and still only diskless).
20181019	Fixing some 8242 key encodings (used by the SGI O2 mode).
		Better memory bank stuff for SGI O2 (128 vs 256 MB RAM).
		Taking the FR bit of the MIPS status register into account to
		use 64-bit floating point registers rather than pairs of 32-bit
		registers (need for OpenBSD/sgi to work).
		Moving OpenBSD/sgi from unsupported.html to guestoes.html.
20181022	Fixing broken MACE interrupt mechanism for SGI O2.
20181025	Implementing MTE_MODE_COPY in the SGI O2 memory transfer engine
		to allow NetBSD to scroll up the framebuffer.
		Made the pckbc work with NetBSD/sgimips.